# Automated-Market-Maker

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  env.example  hardhat.config.js  package.json
amm-research-engine/: README.md  conftest.py  pyproject.toml  requirements.txt
amm-research-engine/amm_research_engine/: __init__.py
amm-research-engine/analytics/: __init__.py  impermanent_loss.py  slippage.py
amm-research-engine/arbitrage/: __init__.py  detector.py  simulator.py
amm-research-engine/config/: default.yaml  symbols.yaml
amm-research-engine/core/: __init__.py  balancer.py  base.py  constant_product.py  constant_sum.py  stableswap.py
amm-research-engine/dashboard/: __init__.py  charts.py  streamlit_app.py
amm-research-engine/data/: __init__.py  base.py  binance.py  coingecko.py  storage.py  thegraph.py
amm-research-engine/notebooks/: 01_amm_comparison.ipynb
amm-research-engine/replay/: __init__.py  replayer.py
amm-research-engine/scripts/: detect_arbitrage.py  fetch_market_data.py  replay_historical.py  run_simulation.py
amm-research-engine/simulation/: __init__.py  engine.py  pool_state.py
amm-research-engine/simulation/agents/: __init__.py  arbitrageur.py  base.py  lp.py  retail.py
amm-research-engine/tests/: test_amm_models.py
contracts/: AMM.sol  AMMFactory.sol  AMMRouter.sol
docs/: ADVANCED_EXTENSIONS.md  ARCHITECTURE.md  CONCEPT_GUIDE.md  DESIGN_DECISIONS.md
frontend/: index.html  package.json  tailwind.config.js  vercel.json
frontend/src/: App.jsx  (+3 more)
scripts/: deploy.js  seed.js
test/: AMM.test.js
(+25 files in other folders)
