[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amm-research-engine"
version = "0.1.0"
description = "Quantitative research platform for AMM analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AMM Research"}]
keywords = ["amm", "defi", "crypto", "quantitative", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "ccxt>=4.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "streamlit>=1.28",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21"]
rl = ["gymnasium>=0.29", "stable-baselines3>=2.0"]
thegraph = ["gql[aio]>=3.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "data*", "simulation*", "analytics*", "arbitrage*", "replay*", "dashboard*"]
